src/objects/AF_Entity__c.object
<CustomObject>
    <description>Will represent the geographic working area where Unilever or an agency is operating. There will be 2 record types, one for Unilever Entities and one for Agency Entities</description>
    <fields>
        <fullName>AF_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To relate Entity with Agency</description>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entity</relationshipLabel>
        <relationshipName>Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Billing_City__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Billing City</description>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Billing_Country__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Billing Country</description>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Billing_State_Province__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Billing state/Province</description>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Billing_Street__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Billing Street.</description>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Billing_Zip_Postal_Code__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Billing zip/postal Code.</description>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Cluster__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Cluster</description>
        <label>Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Amercia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Amercia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Country__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Country</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo (Dem.Rep)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Description__c</fullName>
        <description>AgencyFee#GLOBAL#To Store description.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_Entity_ID__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Entity ID</description>
        <label>Entity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Fax__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Fax</description>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether entity appears in dropdown in matrx</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Legal_Entity_Name__c</fullName>
        <description>Stores the Legal Entity Name</description>
        <label>Legal Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Local_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Local currency base on Country</description>
        <label>Local Currency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AF_Country__c</field>
                <operation>equals</operation>
                <valueField>AF_Currency__c.AF_Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AF_Currency__c</referenceTo>
        <relationshipLabel>Entity</relationshipLabel>
        <relationshipName>Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Phone__c</fullName>
        <description>AgencyFee#GLOBAL#To Store phone</description>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Shipping_City__c</fullName>
        <description>AgencyFee#GLOBAL#To Store shipping city</description>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Shipping_Country__c</fullName>
        <description>AgencyFee#GLOBAL#To Store shipping country.</description>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Shipping_State_Province__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Shipping state/province</description>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Shipping_Street__c</fullName>
        <description>AgencyFee#GLOBAL#To Store shipping street.</description>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Shipping_Zip_Postal_Code__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Shipping zip/postal code</description>
        <label>Shipping Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_UAPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To confirm whether entity is related to UAPL or not.</description>
        <label>UAPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_UKCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To confirm whether the entity is related to UKCR or not.</description>
        <label>UKCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Unique_Name__c</fullName>
        <description>Stores a unique name. Used for Dataloading</description>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Controller_Group__c</fullName>
        <description>Stores the Controller Group region for the entity. used for Controller Reviews</description>
        <label>Controller Group</label>
        <picklist>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMETRUB</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsCentralHub__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether entity is a central hub or not</description>
        <label>AF_IsCentralHub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <label>key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Entity</label>
    <listViews>
        <fullName>Agency_Entity</fullName>
        <columns>NAME</columns>
        <columns>AF_Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AF_Entity__c.AF_Agency_Entity</value>
        </filters>
        <label>Agency Entity</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AF_Agency__c</columns>
        <columns>AF_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity</pluralLabel>
    <recordTypes>
        <fullName>AF_Agency_Entity</fullName>
        <active>true</active>
        <description>Contains the Fields related to Agencies</description>
        <label>Agency Entity</label>
    </recordTypes>
    <recordTypes>
        <fullName>AF_Unilever_Entity</fullName>
        <active>true</active>
        <description>Contains the Fields related to Unilever</description>
        <label>Unilever Entity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>